[package]
name = "scion-test-operator"
version = "0.1.0"
authors = ["Johannes Wünsche <johannes@spacesnek.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"

